--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,11 @@
 <mat-toolbar class="toolbar">
-  <button mat-icon-button>
+  <button mat-icon-button class="menu-button">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <header>
+    Fawley & the Waterside Dog Show
+  </header>
+  <button mat-icon-button class="profile-button">
     <mat-icon>person</mat-icon>
   </button>
 </mat-toolbar>
