Adding buy tickets button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
 <app-header></app-header>
+<div class="buy-tickets">
+<button mat-raised-button>
+  <mat-icon class="buy-icon">shopping_cart</mat-icon>
+</button>
+</div>
