--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
 
-html, body { height: 100%; }
+html, body { height: 100%; background-color: ghostwhite;}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
