--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<app-slideshow></app-slideshow>
 <div class="buy-tickets">
 <button mat-raised-button>
   <mat-icon class="buy-icon">shopping_cart</mat-icon>
