--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 
-html, body { height: 100%; background-color: ghostwhite;}
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body { height: 100%; background-color: cornflowerblue;}
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
+
+
 
