--- a/src/app/slideshow/slideshow.component.html
+++ b/src/app/slideshow/slideshow.component.html
@@ -14,5 +14,5 @@
 <!--</div>-->
 
 <div class="image-container">
-  <img src="/images/dog_show.png" alt="dog show image">
+  <img src="./images/dog_show.png" alt="dog show image">
 </div>
