--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,5 +1,12 @@
 .toolbar {
   background-color: darkorange;
+  width: 100vw; /* Full width of the viewport */
+  margin: 0;
+  padding: 0;
+  left: 0;
+  top: 0;
+  position: relative;
+  box-sizing: border-box;
 }
 
 .menu-button {
