--- a/src/home/home.css
+++ b/src/home/home.css
@@ -18,7 +18,9 @@
     /* background-color: rgba(0,0,0,0.5); */ /* Optional: Uncomment if needed */
     padding: 20px;
     border-radius: 10px;
-    margin-bottom: 20px; /* Space between text and button */
+    margin-bottom: 20% !important; /* Space between text and button */
+    margin-right: 40% !important;
+
 }
 
 .buy-tickets-button {
