--- a/src/components/tickets/ticket-selection.css
+++ b/src/components/tickets/ticket-selection.css
@@ -1,15 +1,14 @@
-/* src/components/ticketSelection.css */
 .ticket-selection-title {
     text-align: center;
     margin-bottom: 20px;
     font-size: 4rem;
     font-weight: 400;
-    color: #ff6f61; /* Customize as needed */
+    color: #ff6f61;
     margin-top: 3% !important;
 }
 
 .ticket-grid {
-    margin-bottom: 20px; /* Space between grid and button */
+    margin-bottom: 20px;
 }
 
 .ticket-card {
@@ -20,7 +19,7 @@
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
-    width: 200px; /* Make ticket card slightly smaller */
+    width: 200px;
     margin: 0 auto;
 }
 
@@ -29,22 +28,30 @@
 }
 
 .ticket-select {
-    min-height: 30px !important; /* Reduce the height */
-    padding: 6px 10px !important; /* Adjust padding */
-}
-
-.MuiSelect-root {
     min-height: 30px !important;
+    padding: 6px 10px !important;
 }
 
-.MuiInputBase-root {
-    padding: 0px !important;
+.ticket-price-container {
+    margin-top: 5px !important;
+    margin-bottom: -15px !important;
+}
+
+.price-text {
+    /*font-weight: bold;*/
+    margin-left: -20px !important;
+}
+
+.price-amount {
+    font-size: 1rem !important;
+    text-align: left;
+    margin-left: -10px !important;
 }
 
 .checkout-button-container {
     display: flex;
     justify-content: center;
-    margin-top: 5%; /* Space above the button */
+    margin-top: 5%;
     margin-bottom: 5%;
 }
 
